--- a/AKSSpecs/todo-queue-deployment.yaml
+++ b/AKSSpecs/todo-queue-deployment.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.30.0 (9d8dcb518)
   creationTimestamp: null
   labels:
-    io.kompose.service: todo-list-save-handler
-  name: todo-list-save-handler
+    io.kompose.service: todo-queue
+  name: todo-queue
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: todo-list-save-handler
+      io.kompose.service: todo-queue
   strategy: {}
   template:
     metadata:
@@ -23,19 +23,15 @@ spec:
       creationTimestamp: null
       labels:
         io.kompose.network/composedfiles-default: "true"
-        io.kompose.service: todo-list-save-handler
+        io.kompose.service: todo-queue
     spec:
       containers:
-        - image: zhengyugan/todo-list-save-handler:1.0
-          name: todo-list-save-handler
+        - image: redis:6.2-alpine
+          name: todo-queue
+          ports:
+            - containerPort: 6379
+              hostPort: 6379
+              protocol: TCP
           resources: {}
-          volumeMounts:
-            - mountPath: /app/config
-              name: appsettings
-              readOnly: true
       restartPolicy: Always
-      volumes:
-        - name: appsettings
-          configMap:
-            name: appsettings
 status: {}
