--- a/AKSSpecs/secretProviderClass.yaml
+++ b/AKSSpecs/secretProviderClass.yaml
@@ -1,7 +1,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: scp-keyvault-01
+  name: todolist-keyvault
   labels: 
     azure.azureauthority.in: aks-apps
     app: asset-manager
