--- a/AKSSpecs/todo-list-save-handler-deployment.yaml
+++ b/AKSSpecs/todo-list-save-handler-deployment.yaml
@@ -36,6 +36,9 @@ spec:
       restartPolicy: Always
       volumes:
         - name: appsettings
-          configMap:
-            name: appsettings
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: todolist-keyvault
 status: {}
